test/files/run/repl-paste-parse.check

scala> 

scala> 
       val case = 9
           ^
repl-paste-parse.script:1: error: illegal start of simple pattern
:quit
